//plugins {
//    id "org.akhikhl.gretty" version "1.2.4"
//}

group 'tw.com.oscar.spring'
version '1.0-SNAPSHOT'

apply plugin: 'groovy'
apply plugin: 'scala'
apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'war'
apply plugin: 'jacoco'
apply plugin: 'rebel'
apply from: 'https://raw.github.com/akhikhl/gretty/master/pluginScripts/gretty.plugin'

sourceCompatibility = 1.8
targetCompatibility = 1.8
compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'

repositories {
    mavenLocal()
    mavenCentral()
}

buildscript {
    repositories {
        mavenCentral()
    }

    dependencies {
        classpath group: 'org.zeroturnaround', name: 'gradle-jrebel-plugin', version: '1.1.2'
    }
}

javadoc {
    options.addStringOption('XDignore.symbol.file', '-quiet')
}

gretty {
    servletContainer = 'tomcat8'
    httpPort = 9090
    debugPort = 9999
    debugSuspend = true
    contextPath = '/oscarspring'
    managedClassReload = false
    scanInterval = 0
    loggingLevel = 'INFO'
    consoleLogEnabled = true
    fileLogEnabled = true
    logFileName = 'oscar-spring'
    // springBoot = true
    // logDir = '/Users/oscarwei168/logs'
    // baseDir = '/Users/oscarwei168/IdeaProjects/OscarSpring/build/serverBaseDir_tomcat8'
    jvmArgs = [
            '-Drebel.base=/Users/oscarwei168/.jrebel',
            '-Drebel.notification.url=http://localhost:50618',
            '-Drebel.workspace.path=/Users/oscarwei168/IdeaProjects',
            '-Drebel.properties=/Users/oscarwei168/.jrebel/jrebel.properties',
            '-agentpath:/Applications/jbdevstudio/studio/plugins/org.zeroturnaround.eclipse.embedder_6.2.3.RELEASE-201508181656/jr6/jrebel/lib/libjrebel64.dylib',
            '-Xms512m',
            '-Xmx2048m',
            // '-XX:MaxPermSize=1024m',
            '-Dspring.profiles.active=dev'
    ]
}

// war file name, it will be created in build/libs/
war.dependsOn generateRebel
war.archiveName 'oscarspring.war'

rebel {
    alwaysGenerate = false
    showGenerated = false
    // rebelXmlDirectory = 'build/classes'
}

configurations {
    all*.exclude group: 'commons-logging', module: 'commons-logging'
}

dependencies {

    def groovyVersion = '2.3.11'
    def scalaVersion = '2.11.7'

    def springVersion = '4.2.0.RELEASE'
    def springSecurityVersion = '4.0.2.RELEASE' // '3.2.8.RELEASE'
    def springBatchVersion = '3.0.4.RELEASE'

    def hibernateVersion = '4.3.11.Final'
    def hibernateSearchVersion = '5.3.0.Final'
    def hibernateValidatorVersion = '5.2.0.Final'

    def mysqlVersion = '5.1.36'
    def h2Version = '1.4.187'
    def mongodbVersion = '1.7.2.RELEASE'

    def injectVersion = '1'
    def guiceVersion = '4.0'
    def hibernateGenericDaoVersion = '1.2.0'
    def ehcacheVersion = '2.6.11'
    def cglibVersion = '3.1'
    def googleGuavaVersion = '18.0'
    def apacheCommonLang3 = '3.4'
    def apacheCommonIO = '2.4'
    def apacheCommonCollections4= '4.0'
    def apacheCommonEmail = '1.4'
    def hikariCpVersion = '2.4.1'
    def freemarkerVersion = '2.3.23'
    def quartzVersion = '2.2.1'
    def lombokVersion = '1.16.4'
    def jamonVersion = '2.81'

    def thymeleafVersion = '2.1.4.RELEASE'
    def thymeleafExtrasSecurityVersion = '2.1.2.RELEASE'
    def thymeleafExtrasTilesVersion = '2.1.1.RELEASE'
    def thymeleafLayoutDialect = '1.2.7'
    def bootstrapVersion = '3.3.2'
    def jacksonVersion = '2.6.0'
    def servletVersion = '3.1.0'
    def jstlVersion = '1.2'

    def slf4jVersion = '1.7.12'
    def logbackVersion = '1.1.3'

    // def junitVersion = '4.12'
    def testngVersion = '6.9.6'
    def mockitoVersion = '1.10.19'
    def hamcrestVersion = '1.3'
    def dbUnitVersion = '2.5.1'
    def javaelVersion = '2.2'

    // programming language
    compile "org.codehaus.groovy:groovy-all:$groovyVersion"
    compile "org.scala-lang:scala-library:$scalaVersion"

    // spring framework
    compile "org.springframework:spring-aspects:$springVersion"
    compile "org.springframework:spring-context-support:$springVersion"
    compile "org.springframework:spring-webmvc:$springVersion"
    compile "org.springframework:spring-orm:$springVersion"
    compile "org.springframework:spring-oxm:$springVersion"
    compile "org.springframework:spring-messaging:$springVersion"
    compile "org.springframework:spring-websocket:$springVersion"
    compile "org.springframework.data:spring-data-mongodb:$mongodbVersion"
    compile "org.springframework.batch:spring-batch-core:$springBatchVersion"

    // spring security
    compile "org.springframework.security:spring-security-web:$springSecurityVersion"
    compile "org.springframework.security:spring-security-config:$springSecurityVersion"
    compile "org.springframework.security:spring-security-ldap:$springSecurityVersion"
    compile "org.springframework.security:spring-security-acl:$springSecurityVersion"

    // hibernate orm
    compile "org.hibernate:hibernate-entitymanager:$hibernateVersion"
    compile "org.hibernate:hibernate-validator:$hibernateValidatorVersion"
    compile("org.hibernate:hibernate-ehcache:$hibernateVersion") {
        exclude group: "net.sf.ehcache", module: "ehcache-core"
    }
    compile "org.hibernate:hibernate-search-orm:$hibernateSearchVersion"

    // web
    compile("org.thymeleaf:thymeleaf-spring4:$thymeleafVersion") {
        exclude group: "javassist", module: "org.javassist"
    }
    compile "org.thymeleaf.extras:thymeleaf-extras-springsecurity4:$thymeleafExtrasSecurityVersion"
    compile "org.thymeleaf.extras:thymeleaf-extras-tiles2:$thymeleafExtrasTilesVersion"
    compile "org.thymeleaf.extras:thymeleaf-extras-tiles2-spring4:$thymeleafExtrasTilesVersion"
    compile "nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:$thymeleafLayoutDialect"
    compile "org.webjars:bootstrap:$bootstrapVersion"

    // 3-party libraries
    compile "javax.inject:javax.inject:$injectVersion"
    compile "com.google.inject:guice:$guiceVersion"
    compile "com.googlecode.genericdao:dao-hibernate:$hibernateGenericDaoVersion"
    compile "net.sf.ehcache:ehcache-core:$ehcacheVersion"
    compile "cglib:cglib-nodep:$cglibVersion"
    compile "commons-io:commons-io:$apacheCommonIO"
    compile "org.apache.commons:commons-lang3:$apacheCommonLang3"
    compile "org.apache.commons:commons-collections4:$apacheCommonCollections4"
    compile "org.apache.commons:commons-email:$apacheCommonEmail"
    compile "com.zaxxer:HikariCP:$hikariCpVersion"
    compile "com.google.guava:guava:$googleGuavaVersion"
    compile "org.freemarker:freemarker:$freemarkerVersion"
    compile "org.quartz-scheduler:quartz:$quartzVersion"
    compile "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
    compile "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
    compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
    compile "org.projectlombok:lombok:$lombokVersion"
    compile "com.jamonapi:jamon:$jamonVersion"

    // jdbc driver
    // compile "com.oracle:ojdbc6:$oracleVersion"
    compile "mysql:mysql-connector-java:$mysqlVersion"

    // log
    compile "org.slf4j:jcl-over-slf4j:$slf4jVersion"
    compile "ch.qos.logback:logback-classic:$logbackVersion"

    providedCompile "javax.servlet:javax.servlet-api:$servletVersion"
    providedCompile "jstl:jstl:$jstlVersion"

    // testing
    testCompile "org.springframework:spring-test:$springVersion"
    // testCompile "junit:junit:$junitVersion"
    testCompile "org.testng:testng:$testngVersion"
    testCompile "org.mockito:mockito-all:$mockitoVersion"
    testCompile "org.hamcrest:hamcrest-core:$hamcrestVersion"
    testCompile "org.hamcrest:hamcrest-library:$hamcrestVersion"
    testCompile "com.h2database:h2:$h2Version"
    testCompile "org.dbunit:dbunit:$dbUnitVersion"
    testCompile "javax.el:el-api:$javaelVersion"
}
